--- a/index.html
+++ b/index.html
@@ -106,36 +106,35 @@
       </div>
     </div>
   </section>
-  <!--<section id="prjcts" class="sec3">
+  <section id="prjcts" class="sec3">
     <p class="section-intro">Browse My Recent</p>
     <p class="sectionheading">Projects</p>
     <section class="projectbox">
       <div class="projectcard1">
        <div class="thumbnail">
-        <img src="images/sk.jpg" >
-        <button class="view-button"> <a href="">View</a></button>
+        <img src="images/portfoliotmb.png" >
+        <button class="view-button"> <a href="https://battasrikanth.github.io/myportfolio/">View</a></button>
         </div>
         <p class="projecttitle">My portfolio</p>
       </div>
       <div class="projectcard2">
         <div class="thumbnail">
-        <img src="images/sk.jpg" >
-        <button class="view-button"> <a href="">View</a></button>
-      </div>
-        <p class="projecttitle">My portfolio</p>
-      
+        <img src="images/weathertmb.png" >
+        <button class="view-button"> <a href="https://battasrikanth.github.io/weatherr/">View</a></button>
+        </div>
+        <p class="projecttitle">weather App</p>
       </div>
       <div class="projectcard3">  <div class="thumbnail">
-        <img src="images/sk.jpg" >
-        <button class="view-button"> <a href="">View</a></button>
+        <img src="images/netflixtmb.png ">
+        <button class="view-button"> <a href="https://battasrikanth.github.io/netflix-clone/">View</a></button>
         </div>
-        <p class="projecttitle">My portfolio</p>
+        <p class="projecttitle">Latest Netflix Homepage</p>
       </div>
-      <div class="projectcard4">  <div class="thumbnail">
-        <img src="images/sk.jpg" >
+      <!--<div class="projectcard4">  <div class="thumbnail">
+        <img src="images/" >
         <button class="view-button"> <a href="">View</a></button>
         </div>
-        <p class="projecttitle">My portfolio</p>
+        <p class="projecttitle">loading</p>
       </div>
       <div class="projectcard5">  <div class="thumbnail">
         <img src="images/sk.jpg" >
@@ -148,9 +147,9 @@
         <button class="view-button"> <a href="">View</a></button>
         </div>
         <p class="projecttitle">My portfolio</p>
-      </div>
+      </div>-->
     </section>
-  </section>-->
+  </section>
   <section  id="cntctm" class="sec4">
     <p class="section-intro">Get In Touch</p>
     <p class="sectionheading">Contact Me</p>
@@ -176,7 +175,7 @@
       </li>
     </ul>
     <br>
-   <button class="form-btn feedback" onclick="showBlock()">Write your feedbak</button>
+   <button class="form-btn feedback" onclick="showBlock()">Write your feedback</button>
 	  <div id="feedback" class="form-box feedback"> 
 		  <div class="textup"> 
 			 <i class="fa fa-solid fa-clock"></i> 
