added calc project

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p id="nme"> Batta Srikanth</p>
         <p id="ls">Frontend Developer</p3>
           <br>
-       <button class="hm-btn cv">Download CV</button>
+       <button class="hm-btn cv" ><a id="qwerty" href="MyResume.pdf" download="battaSrikanthResume">Download CV</a></button>
       <a href="#cntctm"> <button class="hm-btn ct">Contact info</button></a>
       
        </div>
@@ -122,7 +122,7 @@
         <img src="images/weathertmb.png" >
         <button class="view-button"> <a href="https://battasrikanth.github.io/weatherr/">View</a></button>
         </div>
-        <p class="projecttitle">weather App</p>
+        <p class="projecttitle">Weather App</p>
       </div>
       <div class="projectcard3">  <div class="thumbnail">
         <img src="images/netflixtmb.png ">
@@ -134,15 +134,15 @@
         <img src="images/toDoList.png" >
         <button class="view-button"> <a href="https://battasrikanth.github.io/toDoList/">View</a></button>
         </div>
-        <p class="projecttitle">toDoList</p>
+        <p class="projecttitle">ToDoList</p>
       </div>
-     <!-- <div class="projectcard5">  <div class="thumbnail">
-        <img src="images/sk.jpg" >
-        <button class="view-button"> <a href="">View</a></button>
+      <div class="projectcard5">  <div class="thumbnail">
+        <img src="images/Calculator.png" >
+        <button class="view-button"> <a href="https://battasrikanth.github.io/calculator/">View</a></button>
         </div>
-        <p class="projecttitle">My portfolio</p>
+        <p class="projecttitle">Calculator</p>
       </div>
-      <div class="projectcard6">  <div class="thumbnail">
+      <!--<div class="projectcard6">  <div class="thumbnail">
         <img src="images/sk.jpg" >
         <button class="view-button"> <a href="">View</a></button>
         </div>
