--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p id="nme"> Batta Srikanth</p>
         <p id="ls">Frontend Developer</p3>
           <br>
-       <button class="hm-btn cv" ><a id="qwerty" href="MyResume.pdf" download="battaSrikanthResume">Download CV</a></button>
+       <button class="hm-btn cv" ><a id="qwerty" href="B Srikanth_java_fullstack_developer.pdf" download="battaSrikanthResume">Download CV</a></button>
       <a href="#cntctm"> <button class="hm-btn ct">Contact info</button></a>
       
        </div>
@@ -142,12 +142,12 @@
         </div>
         <p class="projecttitle">Calculator</p>
       </div>
-      <!--<div class="projectcard6">  <div class="thumbnail">
-        <img src="images/sk.jpg" >
-        <button class="view-button"> <a href="">View</a></button>
+     <div class="projectcard6">  <div class="thumbnail">
+        <img src="images/formtmb.png" >
+        <button class="view-button"> <a href="https://battasrikanth.github.io/responsiveForm/">View</a></button>
         </div>
-        <p class="projecttitle">My portfolio</p>
-      </div>-->
+        <p class="projecttitle">Responsive form</p>
+      </div>
     </section>
   </section>
   <section  id="cntctm" class="sec4">
